<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.benyamin.weathertrack.HomeFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_home_to_forecast"
            app:destination="@id/forecastFragment" />

        <action
            android:id="@+id/action_home_to_history"
            app:destination="@id/historyFragment" />
    </fragment>

    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.benyamin.weathertrack.ForecastFragment"
        android:label="@string/forecast_title">

        <action
            android:id="@+id/action_forecast_to_details"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.benyamin.weathertrack.DetailsFragment"
        android:label="@string/details_title" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.benyamin.weathertrack.HistoryFragment"
        android:label="@string/history_title" />

</navigation>